docs/0.16/_sources/modeling/gallery/spectral/plot_exp_cutoff_powerlaw.rst.txt
.. note::
    :class: sphx-glr-download-link-note

    Click :ref:`here <sphx_glr_download_modeling_gallery_spectral_plot_exp_cutoff_powerlaw.py>` to download the full example code
.. rst-class:: sphx-glr-example-title

.. _sphx_glr_modeling_gallery_spectral_plot_exp_cutoff_powerlaw.py:


.. _exp-cutoff-powerlaw-spectral-model:

Exponential Cutoff Powerlaw Spectral Model
==========================================

This model parametrises a cutoff power law spectrum.

It is defined by the following equation:

.. math::
    \phi(E) = \phi_0 \cdot \left(\frac{E}{E_0}\right)^{-\Gamma} \exp(- {(\lambda E})^{\alpha})

Example plot
------------
Here is an example plot of the model:


.. code-block:: default


    from astropy import units as u
    import matplotlib.pyplot as plt
    from gammapy.modeling.models import ExpCutoffPowerLawSpectralModel, Models, SkyModel

    energy_range = [0.1, 100] * u.TeV
    model = ExpCutoffPowerLawSpectralModel(
        amplitude=1e-12 * u.Unit("cm-2 s-1 TeV-1"),
        index=2,
        lambda_=0.1 * u.Unit("TeV-1"),
        reference=1 * u.TeV,
    )
    model.plot(energy_range)
    plt.grid(which="both")




.. image:: /modeling/gallery/spectral/images/sphx_glr_plot_exp_cutoff_powerlaw_001.png
    :class: sphx-glr-single-img





YAML representation
-------------------
Here is an example YAML file using the model:


.. code-block:: default


    model = SkyModel(spectral_model=model, name="exp-cutoff-power-law-model")
    models = Models([model])

    print(models.to_yaml())




.. rst-class:: sphx-glr-script-out

 Out:

 .. code-block:: none

    components:
    -   name: exp-cutoff-power-law-model
        type: SkyModel
        spectral:
            type: ExpCutoffPowerLawSpectralModel
            parameters:
            - {name: index, value: 2.0, unit: '', min: .nan, max: .nan, frozen: false}
            - {name: amplitude, value: 1.0e-12, unit: cm-2 s-1 TeV-1, min: .nan, max: .nan,
                frozen: false}
            - {name: reference, value: 1.0, unit: TeV, min: .nan, max: .nan, frozen: true}
            - {name: lambda_, value: 0.1, unit: TeV-1, min: .nan, max: .nan, frozen: false}
            - {name: alpha, value: 1.0, unit: '', min: .nan, max: .nan, frozen: true}






.. _sphx_glr_download_modeling_gallery_spectral_plot_exp_cutoff_powerlaw.py:


.. only :: html

 .. container:: sphx-glr-footer
    :class: sphx-glr-footer-example



  .. container:: sphx-glr-download

     :download:`Download Python source code: plot_exp_cutoff_powerlaw.py <plot_exp_cutoff_powerlaw.py>`



  .. container:: sphx-glr-download

     :download:`Download Jupyter notebook: plot_exp_cutoff_powerlaw.ipynb <plot_exp_cutoff_powerlaw.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
